Add 13 new in-depth lessons across Java LTS and Spring modules
New lessons added:
- Java 17: Text Blocks, Pattern Matching for switch, Sealed Classes
- Java 21: Virtual Threads (Project Loom), Records Advanced
- Spring Boot: DTO Pattern, Bean Validation, WebSocket/STOMP
- Spring Cache: Caching Deep Dive (Caffeine + Redis)
- Spring Profiles: Profile-Specific Configuration
- Spring Logging: Structured Logging with SLF4J + MDC
- Spring Lombok: Lombok Deep Dive
- Spring File Upload: MultipartFile handling + storage strategies

Total lessons: 696 (was 683)

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>